# shwelcome

./: Cargo.toml  README.md  go.mod  go.sum  main.go
anki/: anki.go
cmd/: root.go
image/: image.go
src/: anki.rs  config.rs  image.rs  main.rs  util.rs
